1-vpc.tf
resource "aws_vpc" "satelite_environment" {
    cidr_block = "10.45.0.0/16"
    enable_dns_hostnames = true
    enable_dns_support = true

    tags = {
      "Name" = "satelite_environment"
    }
}
